--- a/index.html
+++ b/index.html
@@ -661,6 +661,21 @@ const QUESTION_BANK = [
   explain: "This is an example explanation showing where feedback text goes.",
   image: "",
   fp: "R2D-TEMPLATE-0001"
+},
+ {
+  id: "template-0002  ",
+  category: "Template – Example",
+  q: "This is an example question used in the template.",
+  choices: [
+    "Example answer A",
+    "Example answer B",
+    "Example answer C",
+    "Example answer D"
+  ],
+  correct: 0,
+  explain: "This is an example explanation showing where feedback text goes.",
+  image: "",
+  fp: "R2D-TEMPLATE-0001"
 }
 ];
 
